Add and persist user settings

--- a/Mocha/Mocha.csproj
+++ b/Mocha/Mocha.csproj
@@ -56,6 +56,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.cs" />
     <EmbeddedResource Include="FormMocha.resx">
       <DependentUpon>FormMocha.cs</DependentUpon>
     </EmbeddedResource>
