--- a/Mocha/App.config
+++ b/Mocha/App.config
@@ -1,6 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Mocha.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <userSettings>
+        <Mocha.Properties.Settings>
+            <setting name="DisplayBoost" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="SystemBoost" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="BoostAlwaysOn" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="BoostOn" serializeAs="String">
+                <value>01/01/2000 07:00:00</value>
+            </setting>
+            <setting name="BoostOff" serializeAs="String">
+                <value>01/01/2000 18:00:00</value>
+            </setting>
+        </Mocha.Properties.Settings>
+    </userSettings>
 </configuration>
